# redgfx

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean_build.sh  debug.sh  gen.sh  run.sh
src/: main.c  maths.h  os.c  os.h  types.h
src/dependencies/: vk_mem_alloc.cpp
src/dependencies/cimgui/: CMakeLists.txt  imgui_impl_glfw.c  imgui_impl_glfw.h  imgui_impl_vulkan.c  imgui_impl_vulkan.h
src/shaders/: triangle_color_v.vert  triangle_meshv.vert  trianglef.frag
